+ Jakarta EE 10 + Redeploy support + Tomcat Parallel Deployment support with status NOT_DONE + Minor optimizations